# everybody-codes

./: .gitignore  README.md
events/2024/: README.md  main.py  pyproject.toml
events/2024/quest01/: __init__.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest02/: __init__.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest03/: __init__.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest04/: __init__.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest05/: __init__.py  old.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest06/: __init__.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest07/: __init__.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest08/: __init__.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest09/: __init__.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest10/: __init__.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest11/: __init__.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest12/: __init__.py  p1.py  p2.py  quest.py  vec.py
events/2024/quest13/: __init__.py  model.py  p2.py  p3.py  quest.py
events/2024/quest14/: __init__.py  model.py  p1.py  p2.py  p3.py  quest.py
events/2024/quest15/: __init__.py  p1.py  quest.py
events/2024/quest17/: __init__.py  p1.py  p3.py  quest.py  vec.py
events/2024/quest19/: __init__.py  p1.py  quest.py
events/2024/src/: main.py
events/2024/src/lib/: api.py
events/2024/src/solutions/: __init__.py  quest01.py  quest02.py  quest03.py  quest04.py  quest05.py  quest06.py  quest07.py  quest08.py  (+7 more)
events/2025/: .gitignore  README.md  main.py  pyproject.toml
events/2025/src/: main.py
(+37 files in other folders)
